test/should_fail/PropertyAlreadyDynamic.oj

@implementation PropertyAlreadyDynamic

@property id foo;
@dynamic foo;
@synthesize foo=_bar;

@end
